# movie_graph

./: CMakeLists.txt  main.cpp  output
include/: CMakeLists.txt  SQL_parser.hh  actors.hh  canvas.h  graph_drawer.hh  typesNmath.h
src/: SQL_parser.cpp  actors.cpp  canvas.cpp  graph_drawer.cpp
